--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "1.13.2",
     "axios-cookiejar-support": "6.0.4",
     "cheerio": "1.1.2",
+    "fuse.js": "^7.1.0",
     "ioredis": "5.8.2",
     "leaflet": "1.9.4",
     "next": "latest",
