--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/papaparse": "5.3.16",
     "@types/react": "latest",
     "@types/react-copy-to-clipboard": "^5.0.7",
+    "babel-plugin-react-compiler": "^1.0.0",
     "css-loader": "7.1.2",
     "style-loader": "4.0.0",
     "typescript": "latest"
